<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">winehouse</string>
    <string name="login">登录</string>
    <string name="welcome">欢迎使用新业酒店系统</string>
    <string name="username">用户名</string>
    <string name="userlogin">用户登录</string>
    <string name="register">注册</string>
    <string name="exit">退出</string>
    <string name="load">正在读取中...</string>
    <string name="index_title">欢迎您, </string>
    <string name="back">返回</string>
    <string name="agency_title">桌面管理</string>
    <string name="floor_filter">楼面过滤  </string>
    <string name="orderId">流水号:</string>
    <string name="deskNumber">桌号:</string>
    <string name="owner">点菜员:</string>
    <string name="order_status">点菜状态</string>
    <string name="order_manager">点单管理</string>
    <string name="start_meal">已上菜</string>
    <string name="add_food">点菜</string>
    <string name="search">搜索</string>
    <string name="add">添加</string>
</resources>
