<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#b0000000"
    android:orientation="vertical" android:gravity="center">

    <LinearLayout
        android:id="@+id/linearLayout3" android:padding="20dp"
        android:layout_width="match_parent" android:background="#e0000000"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content">
	        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="80dp" android:id="@+id/textView1" android:text="@string/orderId" android:gravity="right"></TextView>
	        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="201107092511010010" android:layout_marginLeft="10dp" android:id="@+id/orderId"></TextView>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
	        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="80dp" android:id="@+id/textView3" android:text="@string/owner" android:gravity="right"></TextView>
	        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="" android:layout_marginLeft="10dp" android:id="@+id/owner"></TextView>
	    </LinearLayout>
	    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_height="wrap_content">
	        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:layout_width="80dp" android:id="@+id/textView5" android:text="@string/deskNumber" android:gravity="right"></TextView>
	        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="" android:id="@+id/deskNumber" android:layout_marginLeft="10dp"></TextView>
	    </LinearLayout>
	
	    <Button
	        android:id="@+id/back"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/back" />
    </LinearLayout>
</LinearLayout>